@@ -36,7 +36,7 @@ New Features
 - New DHCP fingerprints
 - Optional backup script in addons/ now archives old records
 - Install guide more accurate
-- Little improvements (#911)
+- Little improvements (#911, #916)
 
 Bug fixes
 - Performance fixes (#908, #910)
